<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG">

    <Button
        android:id="@+id/button4"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:autoText="false"
        android:background="@drawable/advnc_button"
        android:clickable="true"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

    <ImageView
        android:id="@+id/selecteddogimage"
        android:layout_width="411dp"
        android:layout_height="330dp"
        android:background="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TextView
        android:id="@+id/selecteddogname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Pet_Name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/selecteddogbreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pet_Breed"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/selecteddogage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Pet_Age"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/selecteddogbreed"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/selecteddogsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/Pet_size"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/selecteddogage"
        tools:layout_editor_absoluteX="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
