<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stories.singleStoryView">

    <View
        android:id="@+id/view11"
        android:layout_width="368dp"
        android:layout_height="653dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storydate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:layout_constraintVertical_bias="0.981" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="97dp"
        android:layout_height="29dp"
        android:text="@string/Person"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView39"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="@+id/view11" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="97dp"
        android:layout_height="22dp"
        android:text="@string/Submitted_person_name"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:layout_constraintVertical_bias="0.985" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="327dp"
        android:layout_height="500dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="207dp"
        android:layout_height="109dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="690dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="85dp"


        android:layout_weight="1"
        android:text="@string/Descrip_Share"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Story"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:layout_constraintVertical_bias="0.025" />

</androidx.constraintlayout.widget.ConstraintLayout>